Fixed missing background image on Card - Simple

--- a/docroot/themes/ci_xy/scss/component/_accordion.scss
+++ b/docroot/themes/ci_xy/scss/component/_accordion.scss
@@ -1,6 +1,7 @@
 .ckeditor-accordion-container {
   > dl {
     border:0!important;
+    margin-bottom:0; // type.scss override
     dt {  
       margin-bottom: 1rem;
        > a {  
